2006-11-20  Paolo Bonzini  <bonzini@gnu.org>
	    Ludovic Courtes  <ludo@chbouib.org>

	* lightning/i386/core-32.h: Disable jit_push and jit_pop if stack not needed.
	* lightning/i386/core-64.h: Disable jit_push and jit_pop if stack not needed.
	* lightning/sparc/core.h: Merge final implementation of jit_pushr and jit_popr.
	* lightning/ppc/core.h: Fix implementation of jit_pushr and jit_popr to
	work (more or less) across function calls.

	* tests/push-pop.c, tests/push-pop.ok: New test.
	* tests/Makefile.am: Run it.

2006-11-20  Paolo Bonzini  <bonzini@gnu.org>

	* lightning/asm-common.h: Make 64-bit safe.
	* lightning/i386/funcs.h: Make 64-bit safe.

	* lightning/i386/asm-64.h: More merge from mzscheme.
	* lightning/i386/asm-i386.h: More merge from mzscheme.
	* lightning/i386/core-32.h: More merge from mzscheme.
	* lightning/i386/core-64.h: More merge from mzscheme.
	* lightning/i386/core-i386.h: More merge from mzscheme.

	* tests/rpnfp.c, tests/testfp.c, tests/funcfp.c: Skip if no floating-point
	support.

2006-11-04  Paolo Bonzini  <bonzini@gnu.org>

	* tests/rpn.c: Remove pushr/popr.

2006-11-04  Paolo Bonzini  <bonzini@gnu.org>

	* lightning/ppc/core.h: Implement jit_allocai, define JIT_FP to be R1.
	* lightning/ppc/funcs.h: Store frame size into _jitl.  Store R1 before
	the STMW, so that the offset is unchanged when we patch the STMW.
	* lightning/i386/core.h: Define JIT_FP to be EBP.
	* lightning/i386/core-32.h: Implement jit_allocai, put LEAVE in the
	epilog if jit_allocai was used.
	* lightning/i386/core-64.h: Implement jit_allocai, put LEAVE in the
	epilog if jit_allocai was used.

2006-11-04  Ludovic Courtes  <ludo@chbouib.org>

	* lightning/sparc/core.h: Implement jit_allocai.
	* tests/allocai.c: New.
	* tests/Makefile.am: Point to new tests.

2006-11-03  Paolo Bonzini  <bonzini@gnu.org>

	* lightning/ppc/core.h: Fix jit_bms using BNE rather than BGT.
	"AND." does signed comparisons.

2006-10-31  Paolo Bonzini  <bonzini@gnu.org>
