@@ -1,3 +1,5 @@
 Paolo Bonzini <bonzini@gnu.org>
 i386 and PPC assemblers by Ian Piumarta <piumarta@inria.fr>
+x86-64 backend by Matthew Flatt <mflatt@cs.utah.edu>
 Major PPC contributions by Laurent Michel <ldm@thorgal.homelinux.org>
+Major SPARC contributions by Ludovic Courtes <ludo@chbouib.org>
